@@ -127,6 +127,17 @@
    # nothing
 </Location>
 
+# POST test with expired cookie
+
+<Location /tests/auth/test12>
+    WebAuthReturnURL /tests/auth/test12return
+</Location>
+
+<Location /tests/auth/test12return>
+    WebAuthAppTokenLifetime 1s
+    WebAuthPostReturnURL /tests/auth/test12post
+</Location>
+
 ##################
 
 <Location /tests/auth/logout>
