@@ -1,0 +1,34 @@
+#!/usr/bin/perl -w
+
+use strict;
+
+my $REMOTE_USER = $ENV{'REMOTE_USER'};
+
+require 'util.pl';
+
+print "Content-type: text/html\n\n";
+
+print "<html>\n";
+
+test_title(12, "test POST with expired cookie");
+
+print<<EOS;
+
+
+You are accessing a webauth-protected page as the user: $REMOTE_USER<br>
+<br>
+Click on the following button to test POSTing with an expired cookie.
+
+    <form  method="post" autocomplete="OFF" enctype="application/x-www-form-urlencoded" ACTION="/tests/auth/test12return?foobar">
+    <input type="submit" name="Submit" value="Do POST">
+    </form>
+<br>
+<br>
+EOS
+
+&return_links;
+
+&dump_stuff;
+
+print "</html>";
+
